--- a/Frontend/BanQ-Grupo5/src/app/principal/logged/logged.component.css
+++ b/Frontend/BanQ-Grupo5/src/app/principal/logged/logged.component.css
@@ -447,3 +447,11 @@ thead th {
     position: sticky;
     top: 0;
 }
+
+.hoja-audio {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
