--- a/Frontend/BanQ-Grupo5/src/app/principal/principal.component.html
+++ b/Frontend/BanQ-Grupo5/src/app/principal/principal.component.html
@@ -1,5 +1,5 @@
 <div class="section">
     <app-register class="cerrado" id="hojaRegister" (mensajeEnviadoVolver)="recibirMensaje($event)"></app-register>
     <app-login class="abierto" id="hojaLogin" (mensajeEnviado)="recibirMensaje($event)" (usuarioLogin)="recibirLog($event)"></app-login>
-    <app-logged class="cerrado" id="hojaLogged" [gastos_input]="gastosArray"></app-logged>
+    <app-logged class="cerrado" id="hojaLogged" [gastos_input]="gastosArray" [id_usuario_input]="id_user"></app-logged>
 </div>
